# Gastown

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: azure-webapp-deploy.yml  ci-cd.yml
docs/: AGENT_DEVELOPMENT.md  API_REFERENCE.md  ARCHITECTURE.md  CONFIG.md  PERFORMANCE_TUNING.md  TROUBLESHOOTING.md  agent_prompt.md  azure-webapp-terraform-deploy.md  opentofu-local-dev.md
gastown/: __init__.py  cli.py  models.py  orchestrator.py  storage.py
gastown/agents/: __init__.py  base.py  mayor.py  polecat.py  refinery.py  witness.py
gastown/tools/: gt_tools.py
gastown/web/: app.py
gastown/web/static/: index.html
infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
tests/: conftest.py
tests/performance/: load_test.py  locustfile.py  test_bench_db.py  test_bench_models.py
tests/security/: test_path_traversal.py  test_static_analysis.py
tests/unit/: test_mayor.py  test_models.py  test_polecat_tools.py  test_storage.py  test_witness.py
