[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gastown"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40.0",
    "pydantic>=2.0",
    "click>=8.0",
    "rich>=13.0",
    "gitpython>=3.1",
    "python-dotenv>=1.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
]

[project.scripts]
gastown = "gastown.cli:main"

[project.optional-dependencies]
dev = [
    # TDD
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    # Performance
    "pytest-benchmark>=4.0",
    "locust>=2.24",
    # Security
    "bandit[toml]>=1.7",
    "safety>=3.0",
    # Mocking / test utilities
    "respx>=0.21",          # mock httpx/litellm HTTP calls
    "freezegun>=1.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["gastown"]
omit = ["gastown/web/static/*", "tests/*"]

[tool.bandit]
exclude_dirs = ["tests", ".worktrees"]
skips = ["B101"]  # allow assert statements in tests

[tool.setuptools.packages.find]
where = ["."]
include = ["gastown*"]
